backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: goapp-alb
spec:
  ingressClassName: alb  
  rules:
  - host: goapp.little-engine.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: goapp-service
            port:
              number: 80
